[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/button_leaderboard_hover.png" type="Texture" id=1]
[ext_resource path="res://sprites/button_play_hover.png" type="Texture" id=2]
[ext_resource path="res://sprites/button_play.png" type="Texture" id=3]
[ext_resource path="res://sprites/button_play_press.png" type="Texture" id=4]
[ext_resource path="res://sprites/button_leaderboard.png" type="Texture" id=5]
[ext_resource path="res://sprites/button_leaderboard_press.png" type="Texture" id=6]
[ext_resource path="res://scripts/menu.gd" type="Script" id=7]

[node name="menu" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="main_screen" type="Control" parent="container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="VBoxContainer" type="HBoxContainer" parent="container/main_screen"]
anchor_right = 2.0
anchor_bottom = 1.0
margin_top = 216.0
rect_scale = Vector2( 0.5, 0.5 )
alignment = 1

[node name="HBoxContainer" type="CenterContainer" parent="container/main_screen/VBoxContainer"]
margin_left = 766.0
margin_right = 1022.0
margin_bottom = 384.0

[node name="button_play" type="TextureButton" parent="container/main_screen/VBoxContainer/HBoxContainer"]
margin_top = 64.0
margin_right = 256.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="HBoxContainer2" type="CenterContainer" parent="container/main_screen/VBoxContainer"]
margin_left = 1026.0
margin_right = 1282.0
margin_bottom = 384.0

[node name="button_leaderboard" type="TextureButton" parent="container/main_screen/VBoxContainer/HBoxContainer2"]
margin_top = 64.0
margin_right = 256.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 128, 128 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 1 )

[connection signal="pressed" from="container/main_screen/VBoxContainer/HBoxContainer/button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="container/main_screen/VBoxContainer/HBoxContainer2/button_leaderboard" to="." method="_on_button_leaderboard_pressed"]
